# subscriber_microservice

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json
src/: appstate.rs  main.rs  websocket.rs
